--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,13 +9,12 @@
   },
   "dependencies": {
     "@backend-technical-test/axios-config": "*",
+    "chart.js": "^2.9.4",
     "react": "16.13.1",
-    "react-currency-input-field": "^3.6.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-spinners": "^0.11.0",
-    "styled-components": "^5.2.3",
-    "react-chartjs-2": "^2.10.0",
-    "chart.js": "^2.9.4"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
